--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="./css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
 
@@ -31,13 +31,13 @@
 
 
     <!-- jQuery -->
-    <script src="//code.jquery.com/jquery.js"></script>
+    <script src="./js/jquery.js"></script>
     <!-- Bootstrap JavaScript -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./bz.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/bz.js"></script>
     <script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
-    <script type="text/javascript" src="./async.js"></script>
-    <script type="text/javascript" src="./bz-console.js"></script>
+    <script type="text/javascript" src="./js/async.js"></script>
+    <script type="text/javascript" src="./js/bz-console.js"></script>
 
 <!-- reloader stuff -->
 
