--- a/public/index.html
+++ b/public/index.html
@@ -43,34 +43,15 @@
       </table>
 
     </div>
-    <script src="./js/jquery.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./js/bz.js"></script>
-    <script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
-    <script src="./js/async.js"></script>
-    <script src="./js/chart.min.js"></script>
-    <script src="./js/bz-console.js"></script>
-
-<script>
-var ws;
-function socket() {
-  ws = new WebSocket("ws://127.0.0.1:9090");
-  ws.onmessage = function ( e ) {
-    var data = JSON.parse(e.data);
-    if (data.r) {
-      location.reload();
-    }
-  };
-}
-setInterval(function () {
-  if ( ws ) {
-    if ( ws.readyState !== 1 ) {
-      socket();
-    }
-  } else {
-    socket();
-  }
-}, 1000);
-</script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/bz.js"></script>
+    <script type="text/javascript" src="js/underscore-min.js"></script>
+    <script src="js/async.js"></script>
+    <script src="js/chart.min.js"></script>
+    <script src="js/handlebars-v1.3.0.js"></script>
+    
+    <script src="js/bz-console.js"></script>
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   </body>
 </html>
